--- a/BlazorTest/Client/Shared/IndividualMovie.razor
+++ b/BlazorTest/Client/Shared/IndividualMovie.razor
@@ -1,10 +1,13 @@
 <p>@((MarkupString)Movie.Title)</p>
 @if (DisplayButtons)
 {
-            <div>
-                @* <button @onclick="Delete">Delete</button> *@
-                <button @onclick="@(()=> DeleteMovie.InvokeAsync(Movie))">Delete</button>
-            </div>
+                                <a href="@movieURL">
+                                    Link to Details
+                                </a>
+                                <div>
+                                    @* <button @onclick="Delete">Delete</button> *@
+                                    <button @onclick="@(()=> DeleteMovie.InvokeAsync(Movie))">Delete</button>
+                                </div>
 }
 
 @code
@@ -12,9 +15,17 @@
     [Parameter] public Movie Movie { get; set; }
     [Parameter] public bool DisplayButtons { get; set; } = false;
     [Parameter] public EventCallback<Movie> DeleteMovie { get; set; }
+    private string movieURL = string.Empty;
+
+    protected override void OnInitialized()
+    {
+        movieURL = $"movie/{Movie.Id}/{Movie.Title.Replace(" ", "-")}";
+    }
+
+
 
     void Delete()
     {
         Console.WriteLine("Deleting...");
     }
-}
+}  
